Prettier/eslint fix

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,3 @@
 {
-  "cSpell.words": [
-    "Alchemism",
-    "kathund",
-    "napi",
-    "undici",
-    "weaponsmithing",
-    "wynncraft",
-    "wynntools"
-  ]
+  "cSpell.words": ["Alchemism", "kathund", "napi", "undici", "weaponsmithing", "wynncraft", "wynntools"]
 }
