--- a/.eslintrc
+++ b/.eslintrc
@@ -1,16 +1,13 @@
 {
-  "root": true,
-  "extends": ["eslint:recommended", "plugin:import/recommended", "prettier"],
-  "plugins": ["deprecation", "@typescript-eslint"],
   "env": {
     "commonjs": true,
     "es2021": true,
     "node": true
   },
-  "parser": "@typescript-eslint/parser",
+  "extends": ["eslint:recommended", "plugin:import/recommended"],
+  "overrides": [],
   "parserOptions": {
-    "ecmaVersion": 12,
-    "project": "./tsconfig.json"
+    "ecmaVersion": "latest"
   },
   "globals": {
     "bot": true,
@@ -21,53 +18,10 @@
   },
   "rules": {
     "curly": ["warn", "multi-line", "consistent"],
-    "no-unused-vars": [
-      "error",
-      {
-        "args": "none"
-      }
-    ],
-    "prefer-const": [
-      "warn",
-      {
-        "destructuring": "all"
-      }
-    ],
-    "no-constant-condition": [
-      "error",
-      {
-        "checkLoops": false
-      }
-    ],
-    "import/extensions": [
-      "warn",
-      "always",
-      {
-        "ts": "never"
-      }
-    ],
-    "deprecation/deprecation": "warn",
-    "no-throw-literal": "error",
-    "@typescript-eslint/naming-convention": [
-      "warn",
-      {
-        "selector": "variableLike",
-        "format": ["camelCase"]
-      },
-      {
-        "selector": "variable",
-        "modifiers": ["const"],
-        "format": ["camelCase", "UPPER_CASE"]
-      },
-      {
-        "selector": "variable",
-        "modifiers": ["const", "exported"],
-        "format": ["UPPER_CASE"]
-      },
-      {
-        "selector": "typeLike",
-        "format": ["PascalCase"]
-      }
-    ]
+    "no-unused-vars": ["error", { "args": "none" }],
+    "prefer-const": ["warn", { "destructuring": "all" }],
+    "no-constant-condition": ["error", { "checkLoops": false }],
+    "import/extensions": ["warn", "always", { "ts": "never" }],
+    "no-throw-literal": "error"
   }
 }
