--- a/package.json
+++ b/package.json
@@ -26,8 +26,12 @@
     "node-fetch": "^3.3.1"
   },
   "devDependencies": {
+    "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.40.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-deprecation": "^1.4.1",
     "eslint-plugin-import": "^2.27.5",
+    "nodemon": "^3.0.1",
     "prettier": "2.8.8"
   }
 }
