--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,14 @@
 {
-  "cSpell.words": ["Alchemism", "kathund", "napi", "undici", "weaponsmithing", "wynncraft", "wynntools"]
+  "cSpell.words": [
+    "Alchemism",
+    "gamemode",
+    "Gamemodes",
+    "ironman",
+    "kathund",
+    "napi",
+    "undici",
+    "weaponsmithing",
+    "wynncraft",
+    "wynntools"
+  ]
 }
