--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cli-color": "^2.0.3",
     "discord.js": "^14.11.0",
     "fs-extra": "^11.1.1",
+    "hastebin": "^0.2.1",
     "moment": "^2.29.4",
     "node-cache": "^5.1.2",
     "node-cron": "^3.0.2",
