--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,7 +10,10 @@
     "kathund",
     "messagelink",
     "napi",
+    "Parens",
+    "pixelic",
     "starb",
+    "uhhh",
     "undici",
     "weaponsmithing",
     "wynncraft",
