Fun Facts Config Deletion

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,8 +13,10 @@
     "Parens",
     "pixelic",
     "starb",
+    "Udderly",
     "uhhh",
     "undici",
+    "Wakatime",
     "weaponsmithing",
     "wynncraft",
     "wynntools",
