--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,18 +1,28 @@
 {
   "cSpell.words": [
     "Alchemism",
+    "Aldorei's",
     "arrowright",
+    "Bremminglar",
+    "Detlas",
+    "Dogedar's",
     "gamemode",
     "Gamemodes",
     "hastebin",
     "invis",
     "ironman",
     "kathund",
+    "Maltic's",
     "messagelink",
     "napi",
+    "Olmic",
     "Parens",
+    "Pchal",
     "pixelic",
+    "RIYU",
     "starb",
+    "Takan",
+    "Tjrq",
     "Udderly",
     "uhhh",
     "undici",
