--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "canvas": "^2.11.2",
+    "chart.js": "^4.3.3",
     "cli-color": "^2.0.3",
     "discord.js": "^14.11.0",
     "fs-extra": "^11.1.1",
@@ -23,7 +24,8 @@
     "moment": "^2.29.4",
     "node-cache": "^5.1.2",
     "node-cron": "^3.0.2",
-    "node-fetch": "^3.3.1"
+    "node-fetch": "^3.3.1",
+    "quickchart-js": "^3.1.3"
   },
   "devDependencies": {
     "@typescript-eslint/parser": "^6.0.0",
