--- a/data/funFacts/config.json
+++ b/data/funFacts/config.json
@@ -10,7 +10,7 @@
   },
   "1123074723069300777": {
     "serverId": "1123074723069300777",
-    "channelId": "1132477880488689786",pi
+    "channelId": "1132477880488689786",
     "roleId": null,
     "ghostPing": false,
     "deleteMsgs": false,
