--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
     "Aldorei's",
     "Aledar",
     "Alem",
+    "alltime",
     "Almuj",
     "Anast",
     "Ankou",
@@ -159,6 +160,7 @@
     "Ternaves",
     "Thanos",
     "Thesead",
+    "timeframe",
     "Tjrq",
     "Troms",
     "Twendle",
