--- a/data/funFacts/config.json
+++ b/data/funFacts/config.json
@@ -16,5 +16,14 @@
     "deleteMsgs": false,
     "disabled": false,
     "setup": { "by": "608584543506530314", "at": "1690271356" }
+  },
+  "1047291131253227540": {
+    "serverId": "1047291131253227540",
+    "channelId": "1047291132050149438",
+    "roleId": null,
+    "ghostPing": false,
+    "deleteMsgs": false,
+    "disabled": true,
+    "setup": { "by": "608584543506530314", "at": "1691204448" }
   }
 }
