--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,36 +1,187 @@
 {
   "cSpell.words": [
+    "Adigard",
+    "Ahmsord",
     "Alchemism",
+    "Aldorei",
     "Aldorei's",
+    "Aledar",
+    "Alem",
+    "alltime",
+    "Almuj",
+    "Anast",
+    "Ankou",
+    "Arnod",
     "arrowright",
+    "Atisun",
+    "Bandysnoot",
+    "Bantisu",
+    "Batelu",
+    "Beda",
     "Bremminglar",
+    "Bricot",
+    "Burtur",
+    "Caissop",
+    "Caras",
+    "Caritat",
+    "Cevalus",
+    "Cikal",
+    "Cinfras",
+    "Corkus",
+    "Coulmis",
+    "Cowfusion",
     "crys",
+    "Daffyd",
+    "Damiral",
+    "Dejol",
+    "Dereg",
+    "Dern",
+    "Dernel",
     "Detlas",
+    "Doan",
+    "Dodegar",
     "Dogedar's",
+    "Dogun",
+    "Doguns",
+    "Duvale",
+    "Efilim",
+    "Elix",
+    "Elphaba",
+    "Eluzterp",
+    "Enkser",
+    "Enzan",
+    "Enzan's",
+    "Eppo",
+    "Fenor",
+    "Ferndor",
+    "Fredris",
+    "Gailard",
     "gamemode",
     "Gamemodes",
+    "Gana",
+    "Gelibord",
+    "Gerten",
+    "Gerts",
+    "Gloop",
+    "Goruca",
+    "Gracen",
+    "Graken",
+    "Grook",
+    "Gylia",
+    "Haily",
+    "Hamsey",
     "hastebin",
+    "Iboju",
     "invis",
+    "Irlok",
     "ironman",
+    "Javen",
+    "Jenprest",
+    "Jofash",
+    "Kander",
+    "Kandon",
+    "Karoc",
     "kathund",
+    "Kelight",
+    "Korun",
+    "Korzim",
+    "Kymer",
+    "L'argwit",
+    "Laen",
+    "Lanu",
+    "Letvus",
+    "Leucsaa",
+    "Lexdale",
+    "Likeru",
+    "Llevigar",
+    "Lozeg",
+    "Lutho",
+    "Lykron",
+    "Malo",
+    "Maltic",
     "Maltic's",
+    "Marston",
+    "Merloni",
     "messagelink",
+    "Miyagi",
+    "mojang",
+    "Mylo",
+    "Nakoba",
     "napi",
+    "Narder",
+    "Nasea",
+    "Nemract",
+    "Nesaak",
+    "Nikoler",
+    "Nivla",
+    "Nohno",
+    "Norsten",
+    "Olivin",
     "Olmic",
+    "Olon",
+    "Olux",
+    "Omango",
+    "Orikal",
+    "Ormrod",
     "Parens",
     "Pchal",
+    "Phinas",
+    "Piere",
+    "Pigmen's",
     "pixelic",
+    "Placardus",
+    "Prentiss",
+    "Psilo",
+    "Qira",
+    "Quartron",
+    "quickchart",
+    "Ragni",
+    "Ragon",
+    "Ranol",
+    "Redbeard's",
+    "Relend",
     "RIYU",
+    "Rodoroc",
+    "Rymek",
+    "Rynend",
+    "Sakura",
+    "Sayleros",
+    "Seasum",
+    "Selchar",
+    "Sensei",
+    "Sherk",
+    "Skyraider",
     "starb",
+    "Svin",
     "Takan",
+    "Tarod",
+    "Tasim",
+    "Telvu",
+    "Ternaves",
+    "Thanos",
+    "Thesead",
+    "timeframe",
     "Tjrq",
+    "Troms",
+    "Twendle",
+    "Tyko",
+    "Tylas",
     "Udderly",
     "uhhh",
+    "Underice",
     "undici",
+    "Voer",
     "Wakatime",
+    "WCYT",
     "weaponsmithing",
+    "Wirt",
+    "Worid",
     "wynncraft",
     "wynntools",
-    "wynntoolsstatschannel"
+    "wynntoolsstatschannel",
+    "Yansur",
+    "Yavlis",
+    "Zenam",
+    "Zhight"
   ]
 }
