--- a/data/funFacts/config.json
+++ b/data/funFacts/config.json
@@ -1,29 +1,1 @@
-{
-  "1132485588621217874": {
-    "serverId": "1132485588621217874",
-    "channelId": "1132513911011291146",
-    "roleId": "1132485588621217874",
-    "ghostPing": false,
-    "deleteMsgs": false,
-    "disabled": false,
-    "setup": { "by": "608584543506530314", "at": "1690268048" }
-  },
-  "1123074723069300777": {
-    "serverId": "1123074723069300777",
-    "channelId": "1132477880488689786",
-    "roleId": null,
-    "ghostPing": false,
-    "deleteMsgs": false,
-    "disabled": false,
-    "setup": { "by": "608584543506530314", "at": "1690271356" }
-  },
-  "1047291131253227540": {
-    "serverId": "1047291131253227540",
-    "channelId": "1047291132050149438",
-    "roleId": null,
-    "ghostPing": false,
-    "deleteMsgs": false,
-    "disabled": true,
-    "setup": { "by": "608584543506530314", "at": "1691204448" }
-  }
-}
+{"1132485588621217874":{"serverId":"1132485588621217874","channelId":"1132513911011291146","roleId":"1132485588621217874","ghostPing":false,"deleteMsgs":false,"disabled":false,"setup":{"by":"608584543506530314","at":"1690268048"}},"1123074723069300777":{"serverId":"1123074723069300777","channelId":"1132477880488689786","roleId":null,"ghostPing":false,"deleteMsgs":false,"disabled":false,"setup":{"by":"608584543506530314","at":"1690271356"}},"1047291131253227540":{"serverId":"1047291131253227540","channelId":"1047291132050149438","roleId":null,"ghostPing":false,"deleteMsgs":false,"disabled":true,"setup":{"by":"608584543506530314","at":"1691204448"}},"966209630906777660":{"serverId":"966209630906777660","channelId":"972135722888884226","roleId":"1063318915901558815","ghostPing":false,"deleteMsgs":false,"disabled":false,"setup":{"by":"608584543506530314","at":"1691491740"}}}
