--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
   "author": "kathund",
   "license": "ISC",
   "dependencies": {
-    "canvas": "^2.11.2",
     "chart.js": "^4.3.3",
     "cli-color": "^2.0.3",
-    "discord.js": "^14.11.0",
+    "discord.js": "^14.12.1",
     "fs-extra": "^11.1.1",
     "hastebin": "^0.2.1",
+    "mkdirp": "^3.0.1",
     "moment": "^2.29.4",
     "node-cache": "^5.1.2",
     "node-cron": "^3.0.2",
