--- a/package.json
+++ b/package.json
@@ -6,15 +6,16 @@
   "scripts": {
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "npx eslint .",
-    "lint:fix": "npx eslint . --fix",
-    "prettier": "npx prettier --check .",
-    "prettier:fix": "npx prettier --write ."
+    "lint:fix": "npx eslint .",
+    "lint": "npx eslint . --fix",
+    "prettier": "npx prettier --write .",
+    "prettier:check": "npx prettier --check ."
   },
   "keywords": [],
   "author": "kathund",
   "license": "ISC",
   "dependencies": {
+    "canvas": "^2.11.2",
     "chart.js": "^4.3.3",
     "cli-color": "^2.0.3",
     "discord.js": "^14.12.1",
