--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint:fix": "npx eslint .",
+    "lint:check": "npx eslint .",
     "lint": "npx eslint . --fix",
     "prettier": "npx prettier --write .",
     "prettier:check": "npx prettier --check ."
