--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
   "license": "ISC",
   "dependencies": {
     "canvas": "^2.11.2",
-    "chart.js": "^4.3.3",
     "cli-color": "^2.0.3",
     "discord.js": "^14.12.1",
     "fs-extra": "^11.1.1",
@@ -26,7 +25,8 @@
     "node-cache": "^5.1.2",
     "node-cron": "^3.0.2",
     "node-fetch": "^3.3.1",
-    "quickchart-js": "^3.1.3"
+    "quickchart-js": "^3.1.3",
+    "uuid-validate": "^0.0.3"
   },
   "devDependencies": {
     "@typescript-eslint/parser": "^6.0.0",
