--- a/data/funFacts/config.json
+++ b/data/funFacts/config.json
@@ -11,11 +11,11 @@
   "1123074723069300777": {
     "serverId": "1123074723069300777",
     "channelId": "1132477880488689786",
-    "roleId": null,
-    "ghostPing": false,
+    "roleId": "1123078106899546132",
+    "ghostPing": true,
     "deleteMsgs": false,
     "disabled": false,
-    "setup": { "by": "608584543506530314", "at": "1690271356" }
+    "setup": { "by": "608584543506530314", "at": "1693522125" }
   },
   "1047291131253227540": {
     "serverId": "1047291131253227540",
