--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "keywords": [],
   "author": "kathund",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "canvas": "^2.11.2",
     "cli-color": "^2.0.3",
