--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "node-cron": "^3.0.2",
     "node-fetch": "^3.3.1",
     "quickchart-js": "^3.1.3",
-    "uuid-validate": "^0.0.3"
+    "uuid-validate": "^0.0.3",
+    "winston": "^3.10.0"
   },
   "devDependencies": {
     "@typescript-eslint/parser": "^6.0.0",
