--- a/config.example.json
+++ b/config.example.json
@@ -4,27 +4,34 @@
     "clientId": "DISCORD_BOT_CLIENT_ID",
     "devServer": "DEV_SERVER_ID_FOR_TESTING",
     "devId": "DEV_USER_ID",
-    "embeds": { "red": "#EF3333", "green": "#33EF33" },
     "channels": {
       "stats": "STATS_CHANNEL_ID",
       "fun-facts-suggestions": "FUN_FACTS_SUGGESTIONS_CHANNEL_ID",
       "welcome": "WELCOME_CHANNEL_ID",
-      "noCommandTracking": ["NO_COMMAND_TRACKING_CHANNEL_ID"]
+      "noCommandTracking": ["NO_COMMAND_TRACKING_CHANNEL_ID"],
+      "support": "SUPPORT_CHANNEL_ID"
     },
     "messages": { "stats": "STATS_MESSAGE_ID" },
     "commands": {
       "report-bug": "REPORT_BUG_COMMAND_ID",
-      "fun-facts": "FUN_FACTS_COMMAND_ID",
-      "server-uptime": "SERVER_UPTIME_COMMAND-_ID"
+      "fun-facts": "FUN_FACTS_COMMAND_ID"
     },
     "roles": { "dev": "DEV_ROLE_ID" },
     "supportInvite": "SUPPORT_SERVER_INVITE",
     "botInvite": "BOT_INVITE_URL",
-    "emojis": { "yes": "✅", "no": "❌" },
     "buttonTimeout": 30
   },
   "api": { "pixelicAPIKey": "PIXELIC_API_KEY" },
   "other": {
+    "colors": {
+      "red": { "hex": "#DE1A1A", "hsl": "0, 79, 49", "rgb": "222, 26, 26" },
+      "pink": { "hex": "#D0A3BF", "hsl": "208, 163, 191", "rgb": "208, 163, 191" },
+      "orange": { "hex": "#F9A03F", "hsl": "31, 94, 61", "rgb": "249, 160, 63" },
+      "blue": { "hex": "#6665DD", "hsl": "241, 64, 63", "rgb": "102, 101, 221" },
+      "aqua": { "hex": "#AAFAC8", "hsl": "143, 89, 82", "rgb": "170, 250, 200" },
+      "green": { "hex": "#00A176", "hsl": "164, 100, 32", "rgb": "0, 161, 118" }
+    },
+    "emojis": { "yes": "✅", "no": "❌" },
     "logo": "https://i.imgur.com/uUuZx2E.png",
     "timezone": null,
     "errorIdLength": 15,
