--- a/config.example.json
+++ b/config.example.json
@@ -53,7 +53,14 @@
         "white": { "hex": "#ffffff", "hsl": "0, 0, 100", "rgb": "255, 255, 255" }
       }
     },
-    "emojis": { "yes": "✅", "no": "❌" },
+    "emojis": {
+      "yes": "✅",
+      "no": "❌",
+      "reload": "🔄",
+      "left": "1135038841426825297",
+      "right": "1135038844706762799",
+      "edit": "📝"
+    },
     "logo": "https://i.imgur.com/uUuZx2E.png",
     "timezone": null,
     "errorIdLength": 15,
