--- a/package.json
+++ b/package.json
@@ -17,24 +17,24 @@
   "dependencies": {
     "canvas": "^2.11.2",
     "cli-color": "^2.0.3",
-    "discord.js": "^14.12.1",
-    "fs-extra": "^11.1.1",
+    "discord.js": "^14.14.1",
+    "fs-extra": "^11.2.0",
     "hastebin": "^0.2.1",
     "mkdirp": "^3.0.1",
     "moment": "^2.29.4",
     "node-cache": "^5.1.2",
-    "node-cron": "^3.0.2",
-    "node-fetch": "^3.3.1",
+    "node-cron": "^3.0.3",
+    "node-fetch": "^3.3.2",
     "quickchart-js": "^3.1.3",
     "uuid-validate": "^0.0.3",
-    "winston": "^3.10.0"
+    "winston": "^3.11.0"
   },
   "devDependencies": {
-    "@typescript-eslint/parser": "^6.0.0",
-    "eslint": "^8.40.0",
-    "eslint-config-prettier": "^9.0.0",
+    "@typescript-eslint/parser": "^6.15.0",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-deprecation": "^2.0.0",
-    "eslint-plugin-import": "^2.27.5",
-    "prettier": "3.1.1"
+    "eslint-plugin-import": "^2.29.1",
+    "prettier": "^3.1.1"
   }
 }
