--- a/config.example.json
+++ b/config.example.json
@@ -25,34 +25,34 @@
   "api": { "pixelicAPIKey": "PIXELIC_API_KEY" },
   "other": {
     "colors": {
-      "cherryBlossomPink": { "hex": "#EFADC0", "hsl": "343, 67, 81", "rgb": "239, 173, 192" },
-      "salmonPink": { "hex": "#ED8796", "hsl": "351, 74, 73", "rgb": "237, 135, 150" },
-      "staleBlue": { "hex": "#6665DD", "hsl": "241, 64, 63", "rgb": "102, 101, 221" },
-      "pink": { "hex": "#D0A3BF", "hsl": "208, 163, 191", "rgb": "208, 163, 191" },
-      "orange": { "hex": "#F9A03F", "hsl": "31, 94, 61", "rgb": "249, 160, 63" },
-      "blue": { "hex": "#7d8cc4", "hsl": "227, 38, 63", "rgb": "125, 140, 197" },
-      "aqua": { "hex": "#AAFAC8", "hsl": "143, 89, 82", "rgb": "170, 250, 200" },
-      "green": { "hex": "#00A176", "hsl": "164, 100, 32", "rgb": "0, 161, 118" },
-      "peach": { "hex": "#FAB387", "hsl": "23, 92, 75", "rgb": "250, 179, 135" },
-      "red": { "hex": "#DE1A1A", "hsl": "0, 79, 49", "rgb": "222, 26, 26" },
-      "gray": { "hex": "#343434", "hsl": "0, 0, 20", "rgb": "52, 52, 52" },
+      "cherryBlossomPink": "#EFADC0",
+      "salmonPink": "#ED8796",
+      "staleBlue": "#6665DD",
+      "pink": "#D0A3BF",
+      "orange": "#F9A03F",
+      "blue": "#7d8cc4",
+      "aqua": "#AAFAC8",
+      "green": "#00A176",
+      "peach": "#FAB387",
+      "red": "#DE1A1A",
+      "gray": "#343434",
       "minecraft": {
-        "black": { "hex": "#000000", "hsl": "0, 0, 0", "rgb": "0, 0, 0" },
-        "darkBlue": { "hex": "#0000AA", "hsl": "240, 100, 33", "rgb": "0, 0, 170" },
-        "darkGreen": { "hex": "#00AA00", "hsl": "120, 100, 33", "rgb": "0, 170, 0" },
-        "darkAqua": { "hex": "#00AAAA", "hsl": "180, 100, 33", "rgb": "0, 170, 170" },
-        "darkRed": { "hex": "#AA0000", "hsl": "0, 100, 33", "rgb": "170, 0, 0" },
-        "darkPurple": { "hex": "#AA00AA", "hsl": "300, 100, 33", "rgb": "170, 0, 170" },
-        "gold": { "hex": "#FFAA00", "hsl": "40, 100, 50", "rgb": "255, 170, 0" },
-        "gray": { "hex": "#AAAAAA", "hsl": "0, 0, 67", "rgb": "170, 170, 170" },
-        "darkGray": { "hex": "#555555", "hsl": "0, 0, 33", "rgb": "85, 85, 85" },
-        "blue": { "hex": "#5555FF", "hsl": "240, 100, 67", "rgb": "85, 85, 255" },
-        "green": { "hex": "#55FF55", "hsl": "120, 100, 67", "rgb": "85, 255, 85" },
-        "aqua": { "hex": "#55FFFF", "hsl": "180, 100, 67", "rgb": "85, 255, 255" },
-        "red": { "hex": "#FF5555", "hsl": "0, 100, 67", "rgb": "255, 85, 85" },
-        "lightPurple": { "hex": "#FF55FF", "hsl": "300, 100, 67", "rgb": "255, 85, 255" },
-        "yellow": { "hex": "#FFFF55", "hsl": "60, 100, 67", "rgb": "255, 255, 85" },
-        "white": { "hex": "#ffffff", "hsl": "0, 0, 100", "rgb": "255, 255, 255" }
+        "black": "#000000",
+        "darkBlue": "#0000AA",
+        "darkGreen": "#00AA00",
+        "darkAqua": "#00AAAA",
+        "darkRed": "#AA0000",
+        "darkPurple": "#AA00AA",
+        "gold": "#FFAA00",
+        "gray": "#AAAAAA",
+        "darkGray": "#555555",
+        "blue": "#5555FF",
+        "green": "#55FF55",
+        "aqua": "#55FFFF",
+        "red": "FF5555",
+        "lightPurple": "#FF55FF",
+        "yellow": "#FFFF55",
+        "white": "#ffffff"
       }
     },
     "emojis": {
